--- a/src/jdbc.properties
+++ b/src/jdbc.properties
@@ -4,6 +4,6 @@
 #jdbc.username=root
 #jdbc.password=654321
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/pocket
+jdbc.url=jdbc:mysql://localhost:3306/pocket2
 jdbc.username=root
-jdbc.password=12345678
+jdbc.password=654321
